--- a/hash-functions/blockchain.tex
+++ b/hash-functions/blockchain.tex
@@ -13,7 +13,7 @@
 	\item получатели (читатели) блоков и зафиксированных транзакций.
 \end{itemize}
 
-В зависимости от реализации эти группы могут пересекаться. В системах типа Bitcoin\index{Bitcoin}, например, все участники распределённой системы могут выполнять все три функции. Хотя за создание блоков (фиксацию транзакций) обычно отвечают выделенные вычислительные мощности, а управляющими их участников называют майнерами (\langen{miners}, см. раздел про децентрализованный blockchain далее).
+В зависимости от реализации эти группы могут пересекаться. В системах типа Bitcoin\index{Bitcoin}, например, все участники распределённой системы могут выполнять все три функции. Хотя за создание блоков (фиксацию транзакций) обычно отвечают выделенные вычислительные мощности, а управляющих ими участников называют майнерами (\langen{miners}, см. раздел про децентрализованный blockchain далее).
 
 Основное требование к таким журналам таково:
 
