--- a/foreword.tex
+++ b/foreword.tex
@@ -112,6 +112,7 @@
 
 	\item[] Александр Парамонов\begin{tiny} (201-416 гр.)\end{tiny} %AleksandrParamonov
 	\item[] Дмитрий Паршин\begin{tiny} (201-313 гр.)\end{tiny} %dmitryparshin
+	\item[] Даниил Похачевский\begin{tiny} (201-519 гр.)\end{tiny} %(no github account, via VK)
 	\item[] Роман Проскин\begin{tiny} (201-316 гр.)\end{tiny} %opomuc
 	\item[] Андрей Пунь\begin{tiny} (201-013 гр.)\end{tiny}
 
