Исправление опечатки в описании атаки Андерсана-Нидхема на Wide-Mouth Frog per Роман Козак

--- a/protocols/wide-mouth_frog.tex
+++ b/protocols/wide-mouth_frog.tex
@@ -29,7 +29,7 @@
 \begin{protocol}
 	\item[(1)] $Alice \to \{ A, E_A \left( T_A, B, K \right) \} \to Trent$
 	\item[(2)] $Trent \to \{ E_B \left( T_T, A, K \right) \} \to Bob$
-	\item[(3)] $Eva \to \{ B, E_B \left( T_A, A, K \right) \} \to Trent$
+	\item[(3)] $Eva \to \{ B, E_B \left( T_T, A, K \right) \} \to Trent$
 	\item[(4)] $Trent \to \{ E_A \left( T'_T, B, K \right) \} \to Alice$
 	\item[(5)] $Eva \to \{ A, E_A \left( T'_T, B, K \right) \} \to Trent$
 	\item[(6)] $Trent \to \{ E_B \left( T''_T, A, K \right) \} \to Bob$
