--- a/foreword.tex
+++ b/foreword.tex
@@ -67,6 +67,7 @@
 	\item[] Константин Ковальков\begin{tiny} (201-015 гр.)\end{tiny}
 	\item[] Николай Козырский\begin{tiny} (201-417 гр.)\end{tiny} %NikolayKozyrskiy
 	\item[] Федор Константинов\begin{tiny} (201-312 гр.)\end{tiny} %FRaKTT
+	\item[] Роман Козак\begin{tiny} (201-519 гр.)\end{tiny}%(no github account, via VK)
 	\item[] Анастасия Коробкина\begin{tiny} (201-312 гр.)\end{tiny} %korobkina
 	\item[] Илья Копцов\begin{tiny} (201-115 гр.)\end{tiny} %IlyaKoptsov
 	\item[] Андрей Кочетыгов\begin{tiny} (201-111 гр.)\end{tiny} %anko1774
