Обновление заголовка книги согласно выходным данным 2-го издания

--- a/Information Security.tex
+++ b/Information Security.tex
@@ -1,14 +1,13 @@
 \input{_settings}
 \addbibresource{bibliography.bib}
+
+\title{Криптографические методы \\ защиты информации \\ \bigskip \normalsize{Учебное пособие}}
+\author{Владимиров Сергей Михайлович \\ Габидулин Эрнст Мухамедович \\ Колыбельников Александр Иванович \\ Кшевецкий Александр Сергеевич}
+\date{\bigskip \bigskip \bigskip \bigskip \bigskip \today \bigskip \\ \small{черновой вариант третьего издания}}
+
 \begin{document}
 \selectlanguage{russian}
 
-\title{Защита информации \\ Учебное пособие}
-\author{Габидулин Эрнст Мухамедович \\ Кшевецкий Александр Сергеевич \\ Колыбельников Александр Иванович \\ Владимиров Сергей Михайлович}
-\date{
- %   \textbf{\textsc{Черновой вариант. Может содержать ошибки.}} \\
-%    \today
-}
 \maketitle
 \setcounter{page}{3}
 
