--- a/_settings.tex
+++ b/_settings.tex
@@ -88,10 +88,10 @@ number = {\textnumero}%
 
 % параметры PDF файла
 \hypersetup{
-    pdftitle={Защита информации},
-    pdfauthor={Э. М. Габидулин, А. С. Кшевецкий, А. И. Колыбельников, С. М. Владимиров},
+    pdftitle={Криптографические методы защиты информации},
+    pdfauthor={С. М. Владимиров, Э. М. Габидулин, А. И. Колыбельников, А. С. Кшевецкий},
     pdfsubject=учебное пособие,
-    pdfkeywords={защита информации, криптография, МФТИ}
+    pdfkeywords={защита информации, криптография, криптографические протоколы, МФТИ}
 }
 
 % добавить точку после номера секции, раздела и~т.\,д.
