Поправлено оформление в разделе про протоколы (меньше страниц с большими пробелами между абзацами)

--- a/protocols/diffie-hellman.tex
+++ b/protocols/diffie-hellman.tex
@@ -12,7 +12,7 @@
 \begin{figure}
     \centering
     \includegraphics[width=0.5\textwidth]{pic/key_distribution-diffie-hellman}
-    \caption{Общая схема взаимодействия участников в протоколе Диффи~---~Хеллмана\label{fig:key_distribution-diffie-hellman}}
+    \caption{Обмен сообщениями в протоколе Диффи~---~Хеллмана\label{fig:key_distribution-diffie-hellman}}
 \end{figure}
 
 \begin{protocol}
@@ -24,9 +24,9 @@
     \item[(3)] Алиса вычисляет $K = B ^ a \bmod p$
 \end{protocol}
 
-Таким способом создан общий секретный сеансовый ключ $K$. За счёт случайного выбора значений $a$ и $b$ в новом сеансе будет получен новой сеансовый ключ.
+Таким способом создан общий секретный сеансовый ключ $K$. За счёт случайного выбора значений $a$ и $b$ в каждом новом сеансе будет получен новой сеансовый ключ.
 
-Протокол обеспечивает только генерацию новых сеансовых ключей (цель G10). В отсутствие третей доверенной стороны он не обеспечивает ни аутентификацию сторон (цель G1), из-за отсутствия проходов с подтверждением владения ключом отсутствует аутентификация ключа (цель G8). Зато, так как протокол не использует длительные <<мастер>>-ключи, можно говорить о том, что он обладает свойством совершенной прямой секретности (цель G9).
+Протокол обеспечивает только генерацию новых сеансовых ключей (цель G10). В отсутствие третей доверенной стороны он не обеспечивает аутентификацию сторон (цель G1), а из-за отсутствия проходов с подтверждением владения ключом отсутствует аутентификация ключа (цель G8). Зато, так как протокол не использует длительные <<мастер>>-ключи, можно говорить о том, что он обладает свойством совершенной прямой секретности (цель G9).
 
 Протокол можно использовать только с такими каналами связи, в которые не может вмешаться активный криптоаналитик. В противном случае протокол становится уязвим к простой атаке <<человек посередине>>\index{атака!<<человек посередине>>}.
 
@@ -46,6 +46,7 @@
     \item[{}] $Mellory~(Bob) \to \left\{ M = g ^ m \bmod p \right\} \to Alice$
     \item[(3)] Алиса вычисляет сеансовый ключ для канала с Меллори (думая, что Меллори это Боб)
         \[K_{AM} = M ^ a \bmod p = g ^ { am } \bmod p\]
+\pagebreak
     \item[(4)] Боб выбирает случайное $2 \leq b \leq p-1$
     \item[{}] Боб вычисляет сеансовый ключ для канала с Меллори (думая, что Меллори это Алиса)
         \[K_{BM} = M ^ b \bmod p = g ^ { bm } \bmod p\]
