--- a/protocols/three-pass.tex
+++ b/protocols/three-pass.tex
@@ -6,7 +6,7 @@
 \begin{figure}[!hb]
     \centering
     \includegraphics[width=0.5\textwidth]{pic/key_distribution-three-pass}
-    \caption{Общая схема взаимодействия участников в трёхпроходных протоколах\label{fig:key_distribution-three-pass}}
+    \caption{Обмен сообщениями в трёхпроходных протоколах\label{fig:key_distribution-three-pass}}
 \end{figure}
 
 Предварительно:
@@ -27,24 +27,33 @@
     \item[(1)] Алиса выбирает новый сеансовый ключ $K$
     \item[{}] $Alice \to \left\{ E_A \left( K \right) \right\} \to Bob$
     \item[(2)] $Bob \to \left\{ E_B \left( E_A \left( K \right) \right) \right\} \to Alice$
-    \item[(3)] Алиса, используя коммутативность функции шифрования,
+    \item[(3)] Алиса, используя коммутативность функции шифрования, <<исключает>> из сообщения Боба шифрование на своём ключе $K_A$:
 	\[ D_A \left( E_B \left( E_A \left( K \right) \right) \right) = D_A \left( E_A \left( E_B \left( K \right) \right) \right) = E_B \left( K \right). \]
     \item[{}] $Alice \to \left\{ E_B \left( K \right) \right\} \to Bob$
     \item[(4)] Боб расшифровывает $D_B \left( E_B \left( K \right) \right) = K$
 \end{protocol}
 
-В результате стороны получают общий секретный ключ $K$.
+В результате работы протокола стороны получают общий секретный ключ $K$.
 
-Общим недостатком всех подобных протоколов является отсутствие аутентификации сторон. Конечно, в случае пассивного криптоаналитика это не требуется, но в реальной жизни всё-таки нужно рассматривать все возможные модели (в том числе активного криптоаналитика) и использовать такие протоколы, которые предполагают взаимную аутентификацию сторон. Также, в отличие от схемы Диффи~---~Хеллмана, новый ключ выбирается инициатором сеанса, что позволяет инициатору, исходя не из лучших побуждений, заставить второго участника использовать устаревший сеансовый ключ.
+Общим недостатком всех подобных протоколов является отсутствие аутентификации сторон. Конечно, в случае пассивного криптоаналитика это не требуется, но в реальной жизни всё-таки нужно рассматривать все возможные модели (в том числе активного криптоаналитика) и использовать такие протоколы, которые предполагают взаимную аутентификацию сторон.
+
+Также, в отличие, например, от схемы Диффи~---~Хеллмана, рассмотренной в разделе~\ref{section-protocols-diffie-hellman}, новый ключ выбирается инициатором сеанса. Это позволяет инициатору, исходя не из лучших побуждений, заставить второго участника использовать устаревший сеансовый ключ.
 
 Если говорить в терминах свойств безопасности, то все представители данного класса протоколов декларируют только аутентификацию ключа (G7). В отличие от схемы Диффи~---~Хеллмана, трёхпроходные протоколы не требуют выбора новых <<мастер>>-ключей для каждого сеанса протокола, из-за чего нельзя гарантировать ни совершенную прямую секретность (G9), ни формирование новых ключей (G10).
 
 \subsection{Тривиальный вариант}
 
-Приведём пример протокола на основе функции XOR (побитовое сложение по модулю 2). Хотя данная функция может использоваться как фундамент для построения систем совершенной криптостойкости (см. главу~\ref{chapter:perfect_secure_systems}), для трёхпроходного протокола это неудачный выбор.
+Приведём пример протокола на основе функции XOR (побитовое сложение по модулю 2). Хотя данная функция может использоваться как фундамент для построения систем совершенной криптостойкости (см. главу~\ref{chapter:perfect_secure_systems}), для трёхпроходного протокола это неудачный выбор. Продемонстрируем это далее.
 
-Перед началом протокола обе стороны имеют свои секретные ключи $K_A$ и $K_B$, представляющие собой случайные двоичные последовательности с равномерным распределением символов. Функция шифрования определяется как $E_i( X ) = X \oplus K_i$, где $X$ это сообщение, а $K_i$ -- секретный ключ. Очевидно, что:
-\[ \forall i, j, X: E_i \left( E_j \left( X \right) \right) = X \oplus K_j \oplus K_i = X \oplus K_i \oplus K_j = E_j \left( E_i \left( X \right) \right) \]
+Пусть перед началом протокола обе стороны имеют свои секретные ключи $K_A$ и $K_B$, представляющие собой случайные двоичные последовательности с равномерным распределением символов. Функция шифрования определяется как $E_i( X ) = X \oplus K_i$, где $X$ это сообщение, а $K_i$ -- секретный ключ. Очевидно, что:
+
+\[ \begin{matrix}
+\forall i, j, X: E_i \left( E_j \left( X \right) \right) & = & X \oplus K_j \oplus K_i & = & \\ 
+ & = & X \oplus K_i \oplus K_j & = & E_j \left( E_i \left( X \right) \right).
+\end{matrix}
+\]
+
+Протокол состоит из следующих проходов и действий.
 
 \begin{protocol}
     \item[(1)] Алиса выбирает новый сеансовый ключ $K$
