Исправление опечаток в описании протокола DASS и добавление кросс-ссылок

--- a/protocols/attacks.tex
+++ b/protocols/attacks.tex
@@ -30,7 +30,7 @@
 
     \item[STS] Атака с известным разовым ключом\index{атака!с известным разовым ключом}\\*
         \langen{short-term secret attack}
-    \item[KN] Атака с известным сеансовым ключом\\*
+    \item[KN] Атака с известным сеансовым ключом\index{атака!с известным сеансовым ключом}\\*
         \langen{known-key attack}
     \item[{}] Классы атак, в которых злоумышленник получает доступ к временным секретам, используемых в протоколах (например, новым сеансовым ключам), после чего может обеспечить, например, аутентификацию или хотя бы установление сессии от имени одной из сторон протокола.
 
