--- a/secure-systems-examples/kerberos.tex
+++ b/secure-systems-examples/kerberos.tex
@@ -1,4 +1,4 @@
-\section{Система Kerberos для локальной сети}\label{section-kerberos}
+\section{Kerberos для локальной сети}\label{section-kerberos}
 \selectlanguage{russian}
 
 Система аутентификации и распределения ключей Kerberos основана на протоколе Нидхема~---~Шрёдера. Самые известные реализации протокола Kerberos включены в Microsoft Active Directory и ПО Kerberos с открытым исходным кодом для Unix.
