"Защита персональных данных в мобильной связи" => "Защита информации в мобильной связи"

--- a/secure-systems-examples/index.tex
+++ b/secure-systems-examples/index.tex
@@ -8,7 +8,7 @@
 
 \input{ipsec}
 
-\section[Защита персональных данных в мобильной связи]{Защита персональных данных в \protect\\ мобильной связи}
+\section{Защита информации в мобильной связи}
 
 \input{gsm2}
 
