--- a/protocols/kerberos.tex
+++ b/protocols/kerberos.tex
@@ -1,4 +1,4 @@
-\subsection{Протокол <<Kerberos>>}\index{протокол!Kerberos|(}
+\subsection{Протокол <<Kerberos>>}\index{протокол!Kerberos|(}\label{section-protocols-kerberos}
 \selectlanguage{russian}
 
 В данном разделе будет описан протокол аутентификации сторон с единственным доверенным центром. Сетевой протокол <<Kerberos>> использует эти идеи при объединении нескольких доверенных центров в единую сеть для обеспечения надёжности и отказоустойчивости. Подробнее о сетевом протоколе <<Kerberos>> смотрите в разделе~\ref{section-kerberos}.
