--- a/secure-systems-examples/kerberos.tex
+++ b/secure-systems-examples/kerberos.tex
@@ -1,7 +1,7 @@
 \section{Kerberos для локальной сети}\label{section-kerberos}
 \selectlanguage{russian}
 
-Система аутентификации и распределения ключей Kerberos основана на протоколе Нидхема~---~Шрёдера. Самые известные реализации протокола Kerberos включены в Microsoft Active Directory и ПО Kerberos с открытым исходным кодом для Unix.
+Система аутентификации и распределения ключей Kerberos основана на протоколе Нидхема~---~Шрёдера (см. разделы~\ref{section-protocols-needham-schroeder, section-protocols-kerberos}). Самые известные реализации протокола Kerberos включены в Microsoft Active Directory и ПО Kerberos с открытым исходным кодом для Unix.
 
 Протокол предназначен для решения задачи аутентификации и распределения ключей в рамках локальной сети, в которой есть группа пользователей, имеющих доступ к набору сервисов, для которых требуется обеспечить единую аутентификацию. Протокол Kerberos использует только симметричное шифрование. Секретный ключ используется для взаимной аутентификации.
 
