Исправление опечаток и грамматики в главе про протоколы от vk.com/id33234434

--- a/protocols/denning-sacco.tex
+++ b/protocols/denning-sacco.tex
@@ -1,7 +1,7 @@
 \subsection{Протокол Деннинга~---~Сакко}\index{протокол!Деннинга~---~Сакко|(}
 \selectlanguage{russian}
 
-Протокол было предложен в 1981 году сотрудниками Университета Пердью Дороти Деннинг и Джованни Марией Сакко (\langen{Dorothy E. Denning, Giovanni Maria Sacco},~\cite{Denning:Sacco:1981}). В данном протоколе к доверенному центру (Тренту) за сертификатами сразу обоих участников обращается инициатор (Алиса, рис.~\ref{fig:denning-sacco}). Этот же участник отвечает и за формирование нового сессионного ключа $K$.
+Протокол был предложен в 1981 году сотрудниками Университета Пердью Дороти Деннинг и Джованни Марией Сакко (\langen{Dorothy E. Denning, Giovanni Maria Sacco},~\cite{Denning:Sacco:1981}). В данном протоколе к доверенному центру (Тренту) за сертификатами сразу обоих участников обращается инициатор (Алиса, рис.~\ref{fig:denning-sacco}). Этот же участник отвечает и за формирование нового сессионного ключа $K$.
 
 \begin{figure}
     \centering
