--- a/protocols/properties.tex
+++ b/protocols/properties.tex
@@ -61,7 +61,7 @@
 	\begin{itemize}
 		\item[(G13)] Защита идентификаторов от прослушивания (несвязываемость).\\*
 			\langen{Identity Protection against Eavesdroppers}.
-		\item[{}] Гарантия, что злоумышленник (подслушивающий) не состоянии связать обмен сообщениями субъектом с его реальной личностью.
+		\item[{}] Гарантия, что злоумышленник (подслушивающий) не в состоянии связать обмен сообщениями субъектом с его реальной личностью.
 		\item[(G14)] Защита идентификаторов от других участников.\\*
 			\langen{Identity Protection against Peer}.
 		\item[{}] Гарантия, что участник переписки не в состоянии связать обмен сообщениями субъекта с реальной личностью, но только с некоторым псевдонимом.
