--- a/protocols/sts.tex
+++ b/protocols/sts.tex
@@ -39,7 +39,7 @@
     \item[(4)] Боб проверяет подпись в сообщении $E_K( S_A ( m_A, m_B ))$.
 \end{protocol}
 
-Протокол обеспечивает арантию формирования новых ключей (G10), но не совершенную прямую секретность (G9).
+Протокол обеспечивает гарантию формирования новых ключей (G10), но не совершенную прямую секретность (G9).
 
 Как показала атака Лоу 1996 года (\cite{Lowe:1996}, рис.~\ref{fig:key_distribution-sts-attack}), протокол не может гарантировать аутентификацию субъектов (цель G1), ключей (G7) и подтверждение владения сессионным ключом (G8). Хотя злоумышленник не может получить доступ к новому сессионному ключу, если протокол использовать только для аутентификации субъектов, Алиса может принять злоумышленника за Боба.
 
@@ -53,13 +53,12 @@
     \item[(1)] Алиса выбирает случайное число $R_A: 2 \leq R_A \leq p-1$.
     \item[{}] $Alice \to \left\{ A, m_A = g^{R_A} \bmod p \right\} \to Mellory~(Bob)$
 
-    \item[(2)] $Mellory \to \left\{ M, m_A \right\} \to Bob$
+    \item[(2)] $Mellory~(Alice) \to \left\{ M, m_A \right\} \to Bob$
 
-    \item[(3)] Боб выбирает случайное число $R_B: 2 \leq R_B \leq p-1$.
-    \item[{}] Боб вычисляет сессионный ключ $K = m_A^{R_B} \bmod p$.
+    \item[(3)] Боб выбирает случайное число $R_B: 2 \leq R_B \leq p-1$ и вычисляет $m_B = g^{R_B} \bmod p$, а также сессионный ключ $K = m_A^{R_B} \bmod p$.
     \item[{}] $Bob \to \left\{ B, M, m_B, E_K( S_B ( m_A, m_B )) \right\} \to Mellory$
 
-    \item[(4)] $Mellory~(Bob) \to \left\{ B, A, E_K( S_B ( m_A, m_B )) \right\} \to Alice$
+    \item[(4)] $Mellory~(Bob) \to \left\{ B, A, m_B, E_K( S_B ( m_A, m_B )) \right\} \to Alice$
 
     \item[(5)] Алиса вычисляет сессионный ключ $K = m_B^{R_A} \bmod p$.
     \item[{}] Алиса проверяет подпись в сообщении $E_K( S_B ( m_A, m_B ))$.
@@ -68,6 +67,6 @@
 
 После успешного завершения протокола Алиса уверена, что общается с Бобом.
 
-Как и все остальные <<криптосистемы-протоколы>>, протокол Station-to-Station основывается на некотором внешнем источнике информации об открытых ключах участников, не подвергая сомнению корректность и надёжность этого источника. Что, в общем случае, неверно. Если информация о ключах участников нужно получать извне при каждом сеансе протокола (например, если участников много, и запомнить ключи всех возможности нет), то канал получения открытых ключей будет основной целью активного криптоаналитика для рассмотренных протоколов. Как от этого защититься с использованием примитивов асимметричной криптографии -- в разделе~\ref{section-protocols-asymmetric}.
+Как и все остальные <<криптосистемы-протоколы>>, протокол Station-to-Station основывается на некотором внешнем источнике информации об открытых ключах участников, не подвергая сомнению корректность и надёжность этого источника. Что, в общем случае, неверно. Если информацию о ключах участников нужно получать извне при каждом сеансе протокола (например, если участников много, и запомнить ключи всех возможности нет), то канал получения открытых ключей будет основной целью активного криптоаналитика для рассмотренных протоколов. Как от этого защититься с использованием примитивов асимметричной криптографии -- в разделе~\ref{section-protocols-asymmetric}.
 
 \index{протокол!Station-to-Station|)}
