--- a/appendix/questions-5.tex
+++ b/appendix/questions-5.tex
@@ -26,7 +26,7 @@
     \item Протокол B92 / BB92. Описание, плюсы и минусы, возможные атаки, известные модификации.
 
     \item База данных на основе Echo-сети. Blockchain. Доказательство работы (proof-of-work, proof-of-share). BitCoin.
-    \item Аутентификация в WEB. Basic, Digest, Cookie-аутентификация. Использование HTTPS для аутентификации клиента.
+    \item Аутентификация в WEB. Basic, Digest, form- и cookie-аутентификация, местоположение аутентификационных данных в HTTP-сообщении (path, headers, body). Использование HTTPS для аутентификации клиента.
     \item Аутентификация в WEB. Протокол OAuth 2.0. Использование JWT.
 
 \end{enumerate}
