Раздел про режимы работы блочных шифров вынесен отдельно для удобства редактирования, добавлено описание характеристик ECB

--- a/_settings.tex
+++ b/_settings.tex
@@ -1,4 +1,6 @@
 \documentclass[10pt,a4paper,openany]{book}
+% Версия PDF для генерации -- 1.6
+\pdfminorversion=6
 % Векторные русских шрифтов в PDF
 % Необходимо установить также пакеты cm-super и cm-unicode
 \usepackage{cmap}
