--- a/block-ciphers/Avalanche_effect.tex
+++ b/block-ciphers/Avalanche_effect.tex
@@ -1,4 +1,4 @@
-\subsection{Лавинный эффект}
+\subsection{Лавинный эффект}\label{section:avalanche_effect}
 \selectlanguage{russian}
 
 \subsubsection{Лавинный эффект в DES}
