--- a/block-ciphers/index.tex
+++ b/block-ciphers/index.tex
@@ -15,7 +15,7 @@
 
 \input{GOST_R_34.12-2015}
 
-\input{Block_cipher_modes}
+\subimport*{modes/}{index}
 
 \section{Некоторые свойства блочных шифров}
 
