--- a/block-ciphers/modes/CBC.tex
+++ b/block-ciphers/modes/CBC.tex
@@ -12,7 +12,7 @@
 \[ \begin{array}{l}
     C_j = E_K(M_j \oplus C_{j-1}), ~ j = 1, 2, \dots, n,
 \end{array} \]
-где $C_0 = \textrm{IV}$ (сокр. от \langen{Initialization Vector}) -- блок, называемый вектором инициализации. Другое название -- синхропосылка.
+где $C_0 = \textrm{IV}$ (сокр. от \langen{Initialization Vector}) -- блок, называемый вектором инициализации\index{вектор!инициализации}. Другое название -- синхропосылка\index{синхропосылка}.
 
 Благодаря сцеплению, \emph{одинаковым} блокам открытого текста соответствуют \emph{различные} шифрованные блоки. Это затрудняет криптоаналитику статистический анализ потока шифрованных блоков.
 
@@ -34,3 +34,17 @@
     \[ C_0 = \textrm{IV} = E_K(\textrm{Nonce}). \]
 
 Этот вектор используется в данном сеансе для шифрования открытого текста в режиме CBC. Заметим, что блок $C_0$ передавать в сеансе необязательно, если приёмная сторона знает заранее дополнительные данные для одноразовой метки. Вместо этого достаточно вначале передать только номер сеанса в открытом виде. Принимающая сторона добавляет к нему дополнительные данные и вычисляет блок $C_0$, необходимый для расшифрования в режиме CBC. Это позволяет сократить издержки, связанные с удлинением пакета. Например, для шифра AES длина блока $C_0$ равна $16$ байтов. Если число сеансов ограничить величиной $2^{32}$ (вполне приемлемой для большинства приложений), то для передачи номера пакета понадобится только $4$ байта.
+
+Плюсы данного режима:
+\begin{itemize}
+	\item отсутствие статистической зависимости блоков открытого текста и шифртекста;
+\end{itemize}
+
+Недостатки:
+\begin{itemize}
+	\item невозможность параллельного шифрования (для следующего блока необходимо знать результат обработки предыдущего);
+\end{itemize}
+
+Говоря о возможности восстановления после ошибок передачи, в режиме CBC при изменении одного бита блока шифртекста будет полностью некорректно расшифрован соответствующий блок отрытого текста, а также единственный бит \emph{следующего} блока открытого текста. Однако последующие блоки затронуты не будут. Поэтому данный режим относят к \emph{самовосстанавливающимся}.
+
+Данный режим (как и большая часть остальных рассмотренных режимов) обеспечивает только конфиденциальность\index{конфиденциальность} передачи данных, но не целостность\index{целостность}. В модели активного злоумышленника, если последний предполагает о возможном содержимом первого блока открытого текста, а вектор инициализации передаётся в открытом виде по каналу связи, злоумышленник может подменить данные в векторе инициализации таким образом, чтобы сформировать нужное содержимое первого блока открытого текста. Такое изменение в режиме CBC не повлечёт других изменений и не приведёт к <<мусору>> в остальных блоках -- будет затронут только первый блок открытого текста. Изменение может не быть замечено получателем и привести к таким действиям получателя, которые ожидает злоумышленник, а не легальный отправитель.
