Улучшена структура разделов ECB/CBC в части преимуществ и недостатков режимов

--- a/block-ciphers/modes/CBC.tex
+++ b/block-ciphers/modes/CBC.tex
@@ -35,14 +35,17 @@
 
 Этот вектор используется в данном сеансе для шифрования открытого текста в режиме CBC. Заметим, что блок $C_0$ передавать в сеансе необязательно, если приёмная сторона знает заранее дополнительные данные для одноразовой метки. Вместо этого достаточно вначале передать только номер сеанса в открытом виде. Принимающая сторона добавляет к нему дополнительные данные и вычисляет блок $C_0$, необходимый для расшифрования в режиме CBC. Это позволяет сократить издержки, связанные с удлинением пакета. Например, для шифра AES длина блока $C_0$ равна $16$ байтов. Если число сеансов ограничить величиной $2^{32}$ (вполне приемлемой для большинства приложений), то для передачи номера пакета понадобится только $4$ байта.
 
-Плюсы данного режима:
+Преимущества:
 \begin{itemize}
 	\item отсутствие статистической зависимости блоков открытого текста и шифртекста;
 \end{itemize}
 
 Недостатки:
 \begin{itemize}
+	\item необходимость дополнения открытого текста до размера, кратного размеру блоку шифрования;
 	\item невозможность параллельного шифрования (для следующего блока необходимо знать результат обработки предыдущего);
+	\item ошибка передачи бита блока шифртекста приводит к ошибке расшифровки блока открытого текста целиком и к ошибке в одном бите следующего блока;
+	\item не обеспечивает целостность.
 \end{itemize}
 
 Говоря о возможности восстановления после ошибок передачи, в режиме CBC при изменении одного бита блока шифртекста будет полностью некорректно расшифрован соответствующий блок отрытого текста, а также единственный бит \emph{следующего} блока открытого текста. Однако последующие блоки затронуты не будут. Поэтому данный режим относят к \emph{самовосстанавливающимся}.
