Расширен раздел про OFB

--- a/appendix/birthdays_paradox.tex
+++ b/appendix/birthdays_paradox.tex
@@ -1,4 +1,4 @@
-\section{Парадокс дней рождения}\label{section-birthday-padradox}
+\section{Парадокс дней рождения}\label{section:birthday-paradox}
 \selectlanguage{russian}
 
 Парадокс дней рождения\index{парадокс дней рождения} связан с контринтуитивным ответом на следующую задачу: какой должен быть минимальный размер группы, чтобы вероятность совпадения дней рождения хотя бы у пары человек из этой группы была больше $1 / 2$? Первый возникающий в голове вариант ответа <<183 человека>> (то есть $\left\lceil 365 / 2 \right\rceil$) является неверным.
