--- a/hash-functions/collisions_probability.tex
+++ b/hash-functions/collisions_probability.tex
@@ -1,7 +1,7 @@
 \subsection{Вероятность коллизии}
 \selectlanguage{russian}
 
-Если $k$-битовая криптографическая хэш-функция имеет равномерное распределение выходных хэш-значений по всем сообщениям, то, согласно парадоксу дней рождения\index{парадокс дней рождения} (см. раздел~\ref{section-birthday-padradox} в~приложении), среди
+Если $k$-битовая криптографическая хэш-функция имеет равномерное распределение выходных хэш-значений по всем сообщениям, то, согласно парадоксу дней рождения\index{парадокс дней рождения} (см.~\autoref{section:birthday-paradox} в~приложении), среди
     \[ n_{1/2} \approx \sqrt{2 \ln 2} \cdot 2^{k/2} \]
 случайных сообщений с вероятностью больше $1/2$ найдутся два сообщения с одинаковыми значениями хэш-функций, то есть произойдёт коллизия.
 
