Добавлена ссылка на патент IBM 1976 года

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -255,6 +255,21 @@
 	language	= {English},
 }
 
+@inproceedings{Miller:1975,
+	author		= {Miller, Gary Lee},
+	title		= {Riemann's Hypothesis and Tests for Primality},
+	booktitle	= {Proceedings of Seventh Annual ACM Symposium on Theory of Computing},
+	series		= {STOC '75},
+	year		= {1975},
+	location	= {Albuquerque, New Mexico, USA},
+	pages		= {234--239},
+	numpages	= {6},
+	publisher	= {ACM},
+	address		= {New York, NY, USA},
+	doi		= {10.1145/800116.803773},
+	language	= {English},
+}
+
 @techreport{Bell:LaPadula:1976,
 	abstract	= {A unified narrative exposition of the ESD/MITRE computer security model is presented. A suggestive interpretation of the model in the context of Multics and a discussion of several other important topics (such as communications paths, sabotage and integrity) conclude the report. A full, formal presentation of the model is included in the Appendix.},
 	author		= {Bell, David Elliott and LaPadula, Leonard John},
@@ -269,6 +284,17 @@
 	language	= {English},
 }
 
+@misc{Ehrsam:Meyer:Smith:Tuchman:1976,
+	title		= {Message verification and transmission error detection by block chaining},
+	author		= {Ehrsam, William F. and Meyer, Carl H. W. and Smith, John L. and Tuchman Walter L.},
+	url		= {https://www.google.com/patents/US4074066A},
+	year		= {1986},
+	month		= {4},
+	day 		= {26},
+	publisher	= {Google Patents},
+	note		= {US Patent 4,074,066}
+}
+
 @ARTICLE{Diffie:Hellman:1976,
 	author		= {Diffie, Whitfield and Hellman, Martin Edward},
 	journal		= {Information Theory, IEEE Transactions on},
@@ -281,21 +307,6 @@
 	keywords	= {Cryptography;Application software;Communication system security;Computer aided instruction;Computer networks;Costs;Hardware;Information theory;Postal services;Public key cryptography;Telecommunication computing},
 	doi		= {10.1109/TIT.1976.1055638},
 	ISSN		= {0018-9448},
-	language	= {English},
-}
-
-@inproceedings{Miller:1975,
-	author		= {Miller, Gary Lee},
-	title		= {Riemann's Hypothesis and Tests for Primality},
-	booktitle	= {Proceedings of Seventh Annual ACM Symposium on Theory of Computing},
-	series		= {STOC '75},
-	year		= {1975},
-	location	= {Albuquerque, New Mexico, USA},
-	pages		= {234--239},
-	numpages	= {6},
-	publisher	= {ACM},
-	address		= {New York, NY, USA},
-	doi		= {10.1145/800116.803773},
 	language	= {English},
 }
 
