--- a/block-ciphers/modes/CBC.tex
+++ b/block-ciphers/modes/CBC.tex
@@ -8,7 +8,7 @@
 	\label{fig:CBC}
 \end{figure}
 
-В режиме сцепления блоков шифртекста (\langen{Cipher Block Chaining, CBC}, рис.~\ref{fig:CBC}) перед шифрованием текущего блока открытого текста предварительно производится его побитовое суммирование по модулю $2$ с предыдущим блоком зашифрованного текста, что и осуществляет <<сцепление>> блоков. Процедура шифрования имеет вид:
+Режим сцепления блоков шифртекста (\langen{Cipher Block Chaining, CBC}, рис.~\ref{fig:CBC}) был описан в патенте компании IBM 1976 года.~\cite{Ehrsam:Meyer:Smith:Tuchman:1976} В этом режиме перед шифрованием текущего блока открытого текста предварительно производится его побитовое суммирование по модулю $2$ с предыдущим блоком зашифрованного текста, что и осуществляет <<сцепление>> блоков. Процедура шифрования имеет вид:
 \[ \begin{array}{l}
     C_j = E_K(M_j \oplus C_{j-1}), ~ j = 1, 2, \dots, n,
 \end{array} \]
