Обновление иллюстрации и формул режима OFB

--- a/block-ciphers/modes/OFB.tex
+++ b/block-ciphers/modes/OFB.tex
@@ -3,9 +3,10 @@
 
 В предыдущих режимах входными блоками для функции шифрования были непосредственно блоки открытого текста. В режиме обратной связи по выходу (\langen{Output Feedback, OFB}, рис.~\ref{fig:OFB}) блоки открытого текста непосредственно на вход функции шифрования не поступают. Вместо этого функция шифрования генерирует псевдослучайный поток байтов (\emph{гамму}), который суммируется побитово по модулю $2$ с открытым текстом для получения шифртекста. Шифрование осуществляют по правилу:
 \[ \begin{array}{l}
-    K_0 = \textrm{IV}, \\
-    K_j = E_K(K_{j-1}), ~ j = 1, 2, \dots, n, \\
-    C_j = K_j \oplus M_j.
+    X_1 = \textrm{IV}, \\
+    Y_j = E_K(X_j), \\
+    C_j = Y_j \oplus M_j, \\
+    X_{j + 1} = Y_j, ~ j = 1, \dots, n - 1.
 \end{array} \]
 
 \begin{figure}[bt]
@@ -15,11 +16,12 @@
 	\label{fig:OFB}
 \end{figure}
 
-Здесь текущий ключ $K_j$ есть результат шифрования предыдущего ключа $K_{j-1}$. Начальное значение $K_0$ известно криптографу и легальному пользователю. На приёмной стороне расшифрование выполняют по правилу:
+Здесь входной блок $X_j$ есть результат шифрования предыдущего блока $X_{j-1}$. Начальное значение $X_1 = \textrm{IV}$ известно отправителю и легальному получателю. На приёмной стороне расшифрование выполняют по правилу:
 \[ \begin{array}{l}
-    K_0 = \textrm{IV}, \\
-    K_j = E_K(K_{j-1}), ~ j = 1, 2, \dots, n, \\
-    M_j = K_j \oplus C_j.
+    X_1 = \textrm{IV}, \\
+	Y_j = E_K(X_j), \\
+	M_j = Y_j \oplus C_j, \\
+	X_{j + 1} = Y_j, ~ j = 1, \dots, n - 1.
 \end{array} \]
 
 Как и в режиме CBC, вектор инициализации $\textrm{IV}$ может быть выбран случайно и передан вместе с шифрованным текстом, либо вычислен на основе одноразовых меток. Здесь особенно важна уникальность вектора инициализации.
