Расширен раздел про CTR

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -404,6 +404,18 @@
 	address		= {Los Alamitos, CA, USA},
 }
 
+@article{Diffie:Hellman:1979,
+	author		= {Diffie, W. and Hellman, M.E.},
+	journal		= {Proceedings of the IEEE},
+	title		= {Privacy and authentication: An introduction to cryptography},
+	year		= {1979},
+	month		= {3},
+	volume		= {67},
+	number		= {3},
+	pages		= {397--427},
+	doi			= {10.1109/PROC.1979.11256}
+}
+
 @article{Rabin:1980,
 	author		= {Rabin, Michael Oser},
 	title		= {Probabilistic Algorithm for Testing Primality},
