Добавлены разделы про имитовставку и про режим GCM

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1167,6 +1167,15 @@
 	language	= {English},
 }
 
+@inproceedings{McGrew:Viega:2004,
+	author		= {McGrew, David A. and Viega, John},
+	title		= {The Galois/Counter Mode of Operation (GCM)},
+	booktitle	= {Submission to NIST Modes of Operation Process},
+	year		= {2005},
+	month		= {1},
+	url			= {https://csrc.nist.rip/groups/ST/toolkit/BCM/documents/proposedmodes/gcm/gcm-spec.pdf}
+}
+
 @INPROCEEDINGS{WangYu:2005,
 	author		= {Wang, Xiaoyun and Yu, Hongbo},
 	title		= {How to Break MD5 and Other Hash Functions},
